# iroharness

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Plans.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  install.sh  package-lock.json  package.json
.github/: pull_request_template.md
crates/realtime-core/: Cargo.toml
crates/realtime-core/src/: lib.rs
docs/: absorption-architecture.md  adapter-contract-testing.md  agent-bank-notes.md  agent-bank.md  aiavatarkit-parity.md  architecture.md  audience-and-permissions.md  audience-data-model.md  body-bridges.md  brains.md  build-an-adapter.md  capability-matrix.md  character-profile.md  ci.md  cli.md  codex.md  deployment.md  design-principles.md  design-summary.md  extension-model-plan-phase2.md  extension-model-plan-phase2a-A.md  extension-model-plan-phase2a-B.md  extension-model-plan-phase2a-Bii.md  extension-model-plan-phase2b.md  extension-model-plan-phase3.md  extension-model-plan-phase7a.md  extension-model-plan-phase7b.md  extension-model-plan.md  extension-model.md  external-bridges.md  inspiration-map.html  inspiration-map.md  install.md  obs.md  persona-guard.md  platform-adapters.md  postgres-backup-restore.md  privacy-and-security.md  protocols.md  public-memory-policy.md  (+11 more)
examples/: adapter-skeleton.mjs  aiavatar-silero-stt-worker.py  audience-admin-client.mjs  audience-registry.mjs  basic.mjs  body-mappers.mjs  brain-gateway.mjs  brain-switching.mjs  browser-screenshot-check.mjs  browser-server.mjs  claude-code-cli.mjs  (+19 more)
(+216 files in other folders)
